fix: add right path to index.css; refactor: add style wraper for content

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,11 +1,4 @@
-.content {
-    grid-area: article;
-  
-    font-size: 1em;
-    padding: 1em 10em;
-    text-align: start;
-    background-color: royalblue;
-}
+
 
 .gridIn { 
     display: grid;
